--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,16 +24,21 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+        <postStartupActivity id="StartupCacheActivity"
+                             implementation="com.example.VersionControlPlugin.activities.StartupCacheActivity"
+                             order="last"/>
+        <notificationGroup id="ProjectCache" displayType="BALLOON"/>
     </extensions>
     <actions>
-        <action id="VersionControlId" class="com.example.VersionControlPlugin.actions.VersionControl"
-                text="VersionControl" description="This is a fine-grained version control plugin.">
-            <add-to-group group-id="Vcs.MainMenu" anchor="last"/>
-        </action>
-        <action id="CacheProjectId" class="com.example.VersionControlPlugin.actions.CacheProjectAction"
-                text="CacheProject" description="Cache current project.">
-            <add-to-group group-id="Vcs.MainMenu" anchor="last"/>
-        </action>
+        <group id="TJAutoSave" text="TJAutoSave" description="This is a fine-grained version control plugin.">
+            <action id="VersionControl" class="com.example.VersionControlPlugin.actions.VersionControl"
+                    text="CheckVersion" description="This is a fine-grained version control plugin.">
+            </action>
+            <action id="SaveVersionAction" class="com.example.VersionControlPlugin.actions.CacheProjectAction"
+                    text="SaveVersion" description="Save current project.">
+            </action>
+            <add-to-group group-id="MainMenu" anchor="last">
+            </add-to-group>
+        </group>
     </actions>
 </idea-plugin>
