--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,14 +1,14 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-    <id>com.example.VersionControlPlugin</id>
+    <id>com.example.TJAutoSave</id>
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>VersionControlPlugin</name>
+    <name>TJAutoSave</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@example.com" url="https://www.yourcompany.com">ExampleCompany</vendor>
+    <vendor email="support@example.com" url="https://www.yourcompany.com">Example</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
@@ -25,15 +25,17 @@
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
         <postStartupActivity id="StartupCacheActivity"
-                             implementation="com.example.VersionControlPlugin.activities.StartupActivity"
+                             implementation="com.example.TJAutoSave.activities.StartupActivity"
                              order="last"/>
         <notificationGroup id="TJAutoSave" displayType="BALLOON"/>
+        <toolWindow id="CheckVersion" secondary="false" anchor="left" icon="AllIcons.Ide.Pipette_rollover"
+                    factoryClass="com.example.TJAutoSave.ui.VersionControlUIFactory"/>
     </extensions>
     <actions>
         <group id="TJAutoSave" text="TJAutoSave" description="This is a fine-grained version control plugin.">
-            <action id="VersionControl" class="com.example.VersionControlPlugin.actions.showUIAction"
-                    text="Check Version" description="This is a fine-grained version control plugin."/>
-            <action id="SaveChangesAction" class="com.example.VersionControlPlugin.actions.SaveChangesAction"
+<!--            <action id="VersionControl" class="com.example.TJAutoSave.actions.showUIAction"-->
+<!--                    text="Check Version" description="This is a fine-grained version control plugin."/>-->
+            <action id="SaveChangesAction" class="com.example.TJAutoSave.actions.SaveChangesAction"
                     text="Save Changes" description="Save current project."/>
             <add-to-group group-id="MainMenu" anchor="last"/>
         </group>
